--- a/index.html
+++ b/index.html
@@ -40,25 +40,55 @@
             <div class="nav-wrap">
                 <a class="wrap-link" href="mailto:info@devstudio.com">
                     <svg class="nav-icon mail">
-                        <use href="./img/symbol-defs.svg#icon-e-mail"></use>
+                        <use href="./img/symbol-defs-2.svg#icon-e-mail"></use>
                     </svg>
                     info@devstudio.com
                 </a>
                 <a class="wrap-link" href="tel:+380961111111">
                     <svg class="nav-icon phone">
-                        <use href="./img/symbol-defs.svg#icon-phone"></use>
+                        <use href="./img/symbol-defs-2.svg#icon-phone"></use>
                     </svg>
                     +38 096 111 11 11
                 </a>
             </div>
     </header>
-    <div class="backdrop is hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal-btn" data-modal-close>
                 <svg class="modal-icon">
                     <use class="modal-icon-wrap" href="./img/symbol-defs.svg#icon-modal-svg"></use>
                 </svg>
             </button>
+            <div class="modal-wrap">
+                <h2 class="modal-wrap-title">
+                    Залиште свої дані, ми вам передзвонимо
+                </h2>
+                <form class="modal-form">
+                    <label for="Ім'я">
+                        <input type="text">
+                        <svg class="form-icon">
+                            <use src="./img/modal-icon.svg#icon-user"></use>
+                        </svg>
+                    </label>
+                    <label for="Телефон">
+                        <input type="text">
+                        <svg class="form-icon">
+                            <use src="./img/modal-icon.svg#icon-phone"></use>
+                        </svg>
+                    </label>
+                    <label for="Пошта">
+                        <input type="text">
+                        <svg class="form-icon">
+                            <use src="./img/modal-icon.svg##icon-mai"></use>
+                        </svg>
+                    </label>
+                    <label for="Коментар">
+                        <textarea  id="" cols="30" rows="10" placeholder="Введіть текст">
+
+                        </textarea>
+                    </label>
+                </form>
+            </div>
         </div>
     </div>
     <main>
@@ -152,22 +182,22 @@
                             <ul class="icon-list">
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-instagram"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-twitter"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-facebook"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-linkedin"></use>
                                     </svg>
                                 </li>
                             </ul>
@@ -185,22 +215,22 @@
                             <ul class="icon-list">
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-instagram"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-twitter"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-facebook"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-linkedin"></use>
                                     </svg>
                                 </li>
                             </ul>
@@ -218,22 +248,22 @@
                             <ul class="icon-list">
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-instagram"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-twitter"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-facebook"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-linkedin"></use>
                                     </svg>
                                 </li>
                             </ul>
@@ -251,22 +281,22 @@
                             <ul class="icon-list">
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-instagram"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-twitter"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-facebook"></use>
                                     </svg>
                                 </li>
                                 <li class="item-icon">
                                     <svg class="team-icon">
-                                        <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                        <use href="./img/symbol-defs-2.svg#icon-linkedin"></use>
                                     </svg>
                                 </li>
                             </ul>
@@ -283,32 +313,32 @@
                 <ul class="clients-list">
                     <li class="clients-item">
                         <svg class="clients-icon">
-                            <use href="./img/symbol-defs.svg#icon-clients-one"></use>
+                            <use href="./img/symbol-defs-2.svg#icon-clients-one"></use>
                         </svg>
                     </li>
                     <li class="clients-item">
                         <svg class="clients-icon">
-                            <use href="./img/symbol-defs.svg#icon-clients-two"></use>
+                            <use href="./img/symbol-defs-2.svg#icon-clients-two"></use>
                         </svg>
                     </li>
                     <li class="clients-item">
                         <svg class="clients-icon">
-                            <use href="./img/symbol-defs.svg#icon-clients-three"></use>
+                            <use href="./img/symbol-defs-2.svg#icon-clients-three"></use>
                         </svg>
                     </li>
                     <li class="clients-item">
                         <svg class="clients-icon">
-                            <use href="./img/symbol-defs.svg#icon-clients-fourth"></use>
+                            <use href="./img/symbol-defs-2.svg#icon-clients-fourth"></use>
                         </svg>
                     </li>
                     <li class="clients-item">
                         <svg class="clients-icon">
-                            <use href="./img/symbol-defs.svg#icon-clients-five"></use>
+                            <use href="./img/symbol-defs-2.svg#icon-clients-five"></use>
                         </svg>
                     </li>
                     <li class="clients-item">
                         <svg class="clients-icon">
-                            <use href="./img/symbol-defs.svg#icon-clients-six"></use>
+                            <use href="./img/symbol-defs-2.svg#icon-clients-six"></use>
                         </svg>
                     </li>
                 </ul>
@@ -346,28 +376,28 @@
                     <li class="footer-wrap-item">
                         <a href="#" class="footer-wrap-link">
                             <svg class="footer-wrap-icon">
-                                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-wrap-item">
                         <a href="#" class="footer-wrap-link">
                             <svg class="footer-wrap-icon">
-                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-wrap-item">
                         <a href="#" class="footer-wrap-link">
                             <svg class="footer-wrap-icon">
-                                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-wrap-item">
                         <a href="#" class="footer-wrap-link">
                             <svg class="footer-wrap-icon">
-                                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -385,7 +415,7 @@
                         <button class="footer-form-btn">
                             Підписатися
                             <svg class="footer-form-icon">
-                                <use href="./img/symbol-defs.svg#icon-telegram"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-telegram"></use>
                             </svg>
                         </button>
                     </div>
