--- a/index.html
+++ b/index.html
@@ -64,29 +64,30 @@
                     Залиште свої дані, ми вам передзвонимо
                 </h2>
                 <form class="modal-form">
-                    <label for="Ім'я">
-                        <input type="text">
+                    <label class="">Ім'я<input type="text">
                         <svg class="form-icon">
-                            <use src="./img/modal-icon.svg#icon-user"></use>
+                            <use href="./img/modal-icon.svg#icon-user"></use>
                         </svg>
                     </label>
-                    <label for="Телефон">
-                        <input type="text">
+                    <label>Телефон<input type="text">
                         <svg class="form-icon">
-                            <use src="./img/modal-icon.svg#icon-phone"></use>
+                            <use href="./img/modal-icon.svg#icon-phone"></use>
                         </svg>
                     </label>
-                    <label for="Пошта">
-                        <input type="text">
+                    <label>Пошта<input type="text">
                         <svg class="form-icon">
-                            <use src="./img/modal-icon.svg##icon-mai"></use>
+                            <use href="./img/modal-icon.svg#icon-mail"></use>
                         </svg>
                     </label>
                     <label for="Коментар">
-                        <textarea  id="" cols="30" rows="10" placeholder="Введіть текст">
+                        <textarea id="" cols="30" rows="10" placeholder="Введіть текст">
 
                         </textarea>
                     </label>
+                    <input type="checkbox">
+                    <p class="form-text">
+                        Погоджуюся з розсилкою та приймаю<a href="">Умови договору</a> 
+                    </p>
                 </form>
             </div>
         </div>
