--- a/index.html
+++ b/index.html
@@ -64,30 +64,32 @@
                     Залиште свої дані, ми вам передзвонимо
                 </h2>
                 <form class="modal-form">
-                    <label class="">Ім'я<input type="text">
+                    <label class="form-item">Ім'я<input class="form-input" type="text">
                         <svg class="form-icon">
                             <use href="./img/modal-icon.svg#icon-user"></use>
                         </svg>
                     </label>
-                    <label>Телефон<input type="text">
+                    <label  class="form-item">Телефон<input class="form-input"  type="text">
                         <svg class="form-icon">
                             <use href="./img/modal-icon.svg#icon-phone"></use>
                         </svg>
                     </label>
-                    <label>Пошта<input type="text">
+                    <label class="form-item">Пошта<input class="form-input"  type="text">
                         <svg class="form-icon">
                             <use href="./img/modal-icon.svg#icon-mail"></use>
                         </svg>
                     </label>
-                    <label for="Коментар">
-                        <textarea id="" cols="30" rows="10" placeholder="Введіть текст">
+                    <label class="form-item" for="">Коментар<textarea class="comment" rows="10" placeholder="Введіть текст">
 
                         </textarea>
                     </label>
-                    <input type="checkbox">
+                    <input class="input-wrap" type="checkbox">
                     <p class="form-text">
                         Погоджуюся з розсилкою та приймаю<a href="">Умови договору</a> 
                     </p>
+                    <button class="form-btn">
+                        Відправити
+                    </button>
                 </form>
             </div>
         </div>
