--- a/index.html
+++ b/index.html
@@ -69,24 +69,27 @@
                             <use href="./img/modal-icon.svg#icon-user"></use>
                         </svg>
                     </label>
-                    <label  class="form-item">Телефон<input class="form-input"  type="text">
+                    <label class="form-item">Телефон<input class="form-input" type="text">
                         <svg class="form-icon">
                             <use href="./img/modal-icon.svg#icon-phone"></use>
                         </svg>
                     </label>
-                    <label class="form-item">Пошта<input class="form-input"  type="text">
+                    <label class="form-item">Пошта<input class="form-input" type="text">
                         <svg class="form-icon">
                             <use href="./img/modal-icon.svg#icon-mail"></use>
                         </svg>
                     </label>
-                    <label class="form-item" for="">Коментар<textarea class="comment" rows="10" placeholder="Введіть текст">
+                    <label class="form-item" for="">Коментар<textarea class="comment" rows="10"
+                            placeholder="Введіть текст">
 
                         </textarea>
                     </label>
-                    <input class="input-wrap" type="checkbox">
-                    <p class="form-text">
-                        Погоджуюся з розсилкою та приймаю<a href="">Умови договору</a> 
-                    </p>
+                    <div class="form-wrap">
+                        <input class="input-wrap" type="checkbox">
+                        <p class="form-text">
+                            Погоджуюся з розсилкою та приймаю       <a class="form-link" href="">Умови договору</a>
+                        </p>
+                    </div>
                     <button class="form-btn">
                         Відправити
                     </button>
