--- a/portfolio.html
+++ b/portfolio.html
@@ -40,13 +40,13 @@
             <div class="nav-wrap">
                 <a class="wrap-link" href="mailto:info@devstudio.com">
                     <svg class="nav-icon mail">
-                        <use href="./img/symbol-defs.svg#icon-e-mail"></use>
+                        <use href="./img/symbol-defs-2.svg#icon-e-mail"></use>
                     </svg>
                     info@devstudio.com
                 </a>
                 <a class="wrap-link" href="tel:+380961111111">
                     <svg class="nav-icon phone">
-                        <use href="./img/symbol-defs.svg#icon-phone"></use>
+                        <use href="./img/symbol-defs-2.svg#icon-phone"></use>
                     </svg>
                     +38 096 111 11 11
                 </a>
@@ -219,28 +219,28 @@
                     <li class="footer-wrap-item">
                         <a href="#" class="footer-wrap-link">
                             <svg class="footer-wrap-icon">
-                                <use href="./img/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-wrap-item">
                         <a href="#" class="footer-wrap-link">
                             <svg class="footer-wrap-icon">
-                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-wrap-item">
                         <a href="#" class="footer-wrap-link">
                             <svg class="footer-wrap-icon">
-                                <use href="./img/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="footer-wrap-item">
                         <a href="#" class="footer-wrap-link">
                             <svg class="footer-wrap-icon">
-                                <use href="./img/symbol-defs.svg#icon-linkedin"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
@@ -258,7 +258,7 @@
                         <button class="footer-form-btn">
                             Підписатися
                             <svg class="footer-form-icon">
-                                <use href="./img/symbol-defs.svg#icon-telegram"></use>
+                                <use href="./img/symbol-defs-2.svg#icon-telegram"></use>
                             </svg>
                         </button>
                     </div>
